@@ -5,6 +5,8 @@ advcomp \(hy History For AdvanceCOMP
 .PD 0
 .IP \(bu
 Added support for .svgz files at advdef [rener].
+.IP \(bu
+Fixed the 8 bit color reduction of 32 bit png files.
 .PD
 .SH ADVANCECOMP VERSION 1.12 2004/09 
 .PD 0
