@@ -11,6 +11,9 @@ AdvanceCOMP Version 1.13 2004/10
 <li>
 Added support for .svgz files at advdef [rener].
 </li>
+<li>
+Fixed the 8 bit color reduction of 32 bit png files.
+</li>
 </ul>
 <h2>2 
 AdvanceCOMP Version 1.12 2004/09
