@@ -7,6 +7,7 @@
 ==================================
 
 * Added support for .svgz files at advdef [rener].
+* Fixed the 8 bit color reduction of 32 bit png files.
 
 
 2 ADVANCECOMP VERSION 1.12 2004/09
